# sb1-uusg8w

./: Dockerfile  README.md  config.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml
api/: endpoints.py
app/: main.py
app/graphql/: __init__.py  schema.py
app/services/: animal_service.py  note_service.py
graphql/: schema.py
models/: animal.py  base.py  employee.py  enums.py  habitat.py  note.py
services/: animal_service.py  cache.py
tests/: test_animal.py
